Update Profile Info component's layout

--- a/src/components/LogoutButton/LogoutButton.scss
+++ b/src/components/LogoutButton/LogoutButton.scss
@@ -7,7 +7,7 @@
     background-color: var(--bg-secondary);
     border: 0;
     font-weight: 600;
-    padding: 8px 16px;
+    padding: 10px;
 
     &:hover:not(:disabled) {
       background-color: var(--bg-secondary);
