--- a/src/components/TopSongs/TopSongs.scss
+++ b/src/components/TopSongs/TopSongs.scss
@@ -7,6 +7,12 @@
   }
 }
 
+.share-songs-modal {
+  .modal-body {
+    background-color: #1f1f1f;
+  }
+}
+
 @media (min-width: 576px) {
   .top-songs-component {
     .title {
