--- a/src/components/TopSongs/TopSongs.scss
+++ b/src/components/TopSongs/TopSongs.scss
@@ -1,23 +1,52 @@
 .top-songs-component {
+  width: 100%;
+  max-width: 320px;
+
   .title {
-    font-size: 24px;
     font-weight: 600;
-    padding: 16px 0;
+    display: flex;
+    padding: 16px 0 0;
+    align-items: center;
+    color: var(--fg-secondary);
+    font-size: 16px;
+    justify-content: center;
+  }
+
+  .sub-title {
+    font-size: 24px;
+    line-height: 1;
+    padding: 0 0 32px;
+    font-weight: 600;
     text-align: center;
   }
-}
 
-.share-songs-modal {
-  .modal-body {
-    background-color: #1f1f1f;
+  .song-info-component {
+    padding-bottom: 24px;
+  }
+
+  .site-address {
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 1px;
+    color: var(--fg-secondary);
+    padding-top: 8px;
+  }
+
+  .download-btn-container {
+    padding-top: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .btn {
+      border-radius: 100px;
+    }
   }
 }
 
 @media (min-width: 576px) {
   .top-songs-component {
-    .title {
-      text-align: left;
-      padding: 32px 0 16px;
-    }
+    width: 340px;
   }
 }
