--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -1,3 +1,27 @@
 .profile-page {
-  margin: 50px auto;
+  margin: 24px auto 0;
+
+  .lists-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .top-songs-component {
+      padding: 24px 0 40px;
+      border-top: 1px solid var(--bg-secondary);
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .profile-page {
+    .lists-container {
+      justify-content: space-around;
+      flex-direction: row;
+
+      .top-songs-component {
+        border-top: 0;
+      }
+    }
+  }
 }
