Update download button logic

--- a/src/components/TopSongs/TopSongs.scss
+++ b/src/components/TopSongs/TopSongs.scss
@@ -43,6 +43,10 @@
     flex-direction: column;
     align-items: center;
 
+    .hidden-img-link {
+      display: none;
+    }
+
     .btn {
       border-radius: 100px;
       background-color: var(--green);
